--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "jquery": "^3.1.1",
-    "pixi.js": "^4.3.4"
+    "pixi.js": "^4.3.4",
+    "tone": "^0.9.0"
   }
 }
